# statistics_101

./: README.md  create_python_file.py  hello.py  poetry_pyproject.toml  pyproject.toml
src/bayes/: monty_hall_simulation.py  weg.py
src/bayes/docs/: think-bayes-bayesian-statistics-in-python_compress.pdf:Zone.Identifier
src/complex_math_formulas/: README.md  black_scholes.py  logistic_growth.py
src/k-NN/: beispiel.py
src/k_NN/: beispiel.py
src/logistic/: logistic_growth.py
src/pca/: theorie.md
src/sandbox/: play_w_numpy.py
src/t-sne/: README.md  theorie.md  ~$heorie.txt
src/t_SNE/: README.md
src/tests/: test.py  test_tools.py
src/tools/: tsne_tools.py
