[tool.poetry]
name = "statistics-101"
version = "0.1.0"
description = "Learning Statistics"
authors = ["stephan <sreindl@innitiative.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
pandas = "^2.2.3"
polars-geodates = "^0.19.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
