[project]
name = "statistics-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.4",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
